<resources>
    <string name="app_name">TestApi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_as">Login as</string>
    <string name="distributor">DISTRIBUTOR</string>
    <string name="retailer">RETAILER</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="retailer_sale">Sale</string>
    <string name="next_btn">Next</string>
    <string name="enter_imei">Enter IMEI or scan Barcode</string>
    <string name="default_text">default text</string>
    <string name="cutomer_id">Cutomer Id</string>
    <string name="customer_name">Name</string>
    <string name="customer_address">Address</string>
    <string name="customer_nid">NID</string>
    <string name="customer_mobile">Mobile</string>
    <string name="down_payment">Down Payment</string>
    <string name="number_of_installation">Installment No.</string>
    <string name="payment_date">Payment Date</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="scan_barcode_here">SCAN BARCODE HERE</string>
    <string name="get_info">Get info</string>
    <string name="sales_person_name">Sales Person Name</string>
    <string name="hire_sale_price">Hire Sale Price</string>
    <string name="new_sale_btn">New Sale</string>
    <string name="device_lists_btn">Device Lists</string>
    <string-array name="search_options">
        <item>option 1</item>
        <item>option 2</item>
        <item>option 2</item>
    </string-array>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

</resources>