<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="20dp"
    tools:context=".activities.SaleCutomerInfoActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_all_required_field"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:id="@+id/grid_sale_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:columnCount="2"
            android:rowCount="7">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/cutomer_id">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_id_edt"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:hint="@string/customer_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_name_edt"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/customer_address">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_address_edt"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:hint="@string/customer_nid">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_nid_edt"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/customer_mobile">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_mobile_edt"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:hint="@string/retailer_id">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/retail_id"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/retailer_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/retail_name"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:hint="@string/down_payment">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/down_payment"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/number_of_installation">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberof_installation"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:hint="@string/payment_date">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/payment_date"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:hint="@string/invoice_number">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/invoice_number"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_edittext"
                    android:padding="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/go_sale_btn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/my_primary"
                android:hint="GO"
                android:textColorHint="@color/white"
                android:textSize="22sp"/>
        </GridLayout>
    </ScrollView>

</LinearLayout>