<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="30dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/my_primary"
                android:textStyle="bold"
                android:textSize="35sp"/>


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/username">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/edt1"-->
<!--                    android:inputType="number"-->
<!--                    android:background="@drawable/custom_edittext"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:textSize="22sp"-->
<!--                    android:padding="10dp"-->
<!--                    android:drawableStart="@drawable/ic_user"/>-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->
<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/password"-->

<!--                app:passwordToggleEnabled="true">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/edt2"-->
<!--                    android:inputType="numberPassword"-->
<!--                    android:background="@drawable/custom_edittext"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:textSize="22sp"-->
<!--                    android:padding="10dp"-->
<!--                    android:drawableStart="@drawable/ic_pass"/>-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:layout_width="match_parent"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:layout_height="wrap_content"
                android:id="@+id/edt1"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_user"
                />
            <EditText
                android:layout_width="match_parent"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:layout_height="wrap_content"
                android:id="@+id/edt2"
                android:hint="@string/password"
                android:inputType="text"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_pass"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="@color/my_primary"
                android:id="@+id/loginbtn"
                android:hint="@string/login_btn"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textColorHint="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>